ajout contact-form

--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
     </header>
 
     <!--Folmulaire de contact-->
-
+<!--
       <section id="main-title">
         <div class="container">
           <div class="row">
@@ -111,6 +111,27 @@
         </div>
       </div>
     </section>
+-->
+
+<div class="container contact">
+  <div class="row">
+      <div class="col-md-12">
+          <div class="card">
+              <h5>Contactez <span>nous</span></h5>
+              <label for="nom">Nom</label><br>
+              <input type="text" class="form-control" placeholder="Votre nom"><br>
+              <label for="prenom">Prénom</label><br>
+              <input type="text" class="form-control" placeholder="Votre prénom"><br>
+              <label for="email">Email</label><br>
+              <input type="text" class="form-control" placeholder="Votre email"><br>
+              <label for="message">Message</label><br>
+              <textarea name="message" id="message" cols="30" rows="10" placeholder="Votre message"></textarea><br>
+              <button type="button" class="btn">Envoyer</button>
+          </div>
+      </div>
+      
+  </div>
+</div>
 
     <!-- Footer -->
 
